--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "catalog": "^3.4.0",
     "chai": "^4.1.2",
     "cross-env": "^7.0.2",
