--- a/demo/package.json
+++ b/demo/package.json
@@ -2,7 +2,7 @@
   "name": "nd-base-demo",
   "version": "0.1.0",
   "dependencies": {
-    "nd-core": "^0.5.0",
+    "@nextdapp/core": "^0.8.4",
     "next": "^9.4.4",
     "next-offline": "^5.0.0",
     "next-redux-wrapper": "^6.0.0",
@@ -10,11 +10,7 @@
     "ramdam": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.5",
-    "redux-observable": "^1.2.0",
-    "redux-thunk": "^2.3.0",
-    "rxjs": "^6.5.5"
+    "react-redux": "^7.1.3"
   },
   "scripts": {
     "dev": "next",
