--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   "peerDependencies": {
     "next": "^9.4.4",
     "next-redux-wrapper": "^6.0.2",
+    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-redux": "^7.2.0"
   },
   "license": "MIT",
-  "dependencies": {
-    "ramdam": "^1.6.2"
-  }
+  "dependencies": {}
 }
