--- a/demo/package.json
+++ b/demo/package.json
@@ -1,16 +1,15 @@
 {
   "name": "next-dapp-bare",
-  "version": "0.2.1",
+  "version": "0.1.0",
   "dependencies": {
-    "@nextdapp/core": "^0.8.8",
+    "@nextdapp/core": "^0.9.0",
     "next": "^9.4.4",
     "next-offline": "^5.0.0",
-    "next-redux-wrapper": "^6.0.0",
     "normalize.css": "^8.0.1",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.1.3"
+    "recoil": "0.0.7"
   },
   "scripts": {
     "dev": "next",
